--- a/inventory.ini
+++ b/inventory.ini
@@ -1,5 +1,9 @@
-[web-on-premise]
-node6 ansible_host=172.27.153.33
+[web-on-prod]
+nodemain ansible_host=172.23.205.169
+[web-on-staging]
+nodestaging ansible_host=172.23.205.215
+[web-on-dev]
+nodedev ansible_host=172.23.201.44
 [web-on-premise:vars]
 ansible_user=ubuntu
 ansible_ssh_private_key_file=~/.ssh/id_ed25519
