--- a/inventory.ini
+++ b/inventory.ini
@@ -5,11 +5,11 @@ nodestaging ansible_host=172.23.205.215
 [web-on-dev]
 nodedev ansible_host=172.23.201.44
 [web-on-prod:vars]
-ansible_user=ubuntu
+ansible_user=jenkins
 ansible_ssh_private_key_file=~/.ssh/id_ed25519
 [web-on-staging:vars]
-ansible_user=ubuntu
+ansible_user=jenkins
 ansible_ssh_private_key_file=~/.ssh/id_ed25519
 [web-on-dev:vars]
-ansible_user=ubuntu
+ansible_user=jenkins
 ansible_ssh_private_key_file=~/.ssh/id_ed25519
