--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = ./Clase36/actividad/ansible/inventory.ini
+inventory = inventory.ini
 remote_user = ubuntu
 force_color = true
 
